Updates on existing files: 1.Added a new entity Category with its repository, form, and controller. 2.Updated the Book entity to include a relationship with Category. 3.Created a migration for the new Category entity. 4.Updated the fixtures to include sample categories on app load. 5.Added html templates for CRUD operations on Category. 6.Updated the base template to include links to the new Category pages. 7.Updated the Book templates to include edit for Category.

--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -16,6 +16,7 @@
                 <th>PublishedAt</th>
                 <th>Description</th>
                 <th>Isbn</th>
+                <th>Category</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -28,6 +29,7 @@
                 <td>{{ book.publishedAt ? book.publishedAt|date('Y-m-d') : '' }}</td>
                 <td>{{ book.description }}</td>
                 <td>{{ book.isbn }}</td>
+                <td>{{ book.category ? book.category.name : '' }}</td>
                 <td>
                     <a href="{{ path('app_book_show', {'id': book.id}) }}">show</a>
                     <a href="{{ path('app_book_edit', {'id': book.id}) }}">edit</a>
@@ -35,7 +37,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="7">no records found</td>
+                <td colspan="8">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
