--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -38,6 +38,10 @@
                 <th>Isbn</th>
                 <td>{{ book.isbn }}</td>
             </tr>
+            <tr>
+                <th>Category</th>
+                <td>{{ book.category ? book.category.name : '' }}</td>
+            </tr>
         </tbody>
     </table>
 
