--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -25,6 +25,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{{ path('app_book_index') }}">Books</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_category_index') }}">Categories</a>
+                    </li>
                 </ul>
             </div>
         </nav>
