--- a/app/templates/default/index.html.twig
+++ b/app/templates/default/index.html.twig
@@ -5,5 +5,6 @@
 {% block body %}
     <h1>{{ title }}</h1>
     <p>Welcome to our bookstore. Browse our collection of amazing books!</p>
-    <a href="{{ path('app_book_index') }}">Getting started</a>
+    <a href="{{ path('app_book_index') }}">Getting started</a><br>
+    <a href="{{ path('app_category_index') }}">Browse categories</a>
 {% endblock %}
